contec_hacking/research/additional_samples/Additional sample program  Analog Input Repeat Ver.1.00/AiRepeat/Sample/jp/Vc2013/AiRepeat/Caio.h



//タイマ関数
long WINAPI AioSetTmEvent(short Id, short TimerId, HWND hWnd, long TmEvent);

long WINAPI AioGetTmEvent(short Id, short TimerId, HWND * hWnd, long * TmEvent);

long WINAPI AioSetTmCallBackProc(short Id, short TimerId,
	long (_stdcall *pProc)(short Id, short TmEvent, WPARAM wParam, LPARAM lParam, void *Param), long TmEvent, void *Param);

long WINAPI AioStartTmTimer(short Id, short TimerId, float Interval);

long WINAPI AioStopTmTimer(short Id, short TimerId);

long WINAPI AioStartTmCount(short Id, short TimerId);

long WINAPI AioStopTmCount(short Id, short TimerId);

long WINAPI AioLapTmCount(short Id, short TimerId, long *Lap);

long WINAPI AioResetTmCount(short Id, short TimerId);

long WINAPI AioTmWait(short Id, short TimerId, long Wait);


//イベントコントローラ
long WINAPI AioSetEcuSignal(short Id, short Destination, short Source);

long WINAPI AioGetEcuSignal(short Id, short Destination, short *Source);


// Setting function (set)
long WINAPI AioGetCntmMaxChannels(short Id, short *CntmMaxChannels);

long WINAPI AioSetCntmZMode(short Id, short ChNo, short Mode);

long WINAPI AioSetCntmZLogic(short Id, short ChNo, short ZLogic);

long WINAPI AioSelectCntmChannelSignal(short Id, short ChNo, short SigType);

long WINAPI AioSetCntmCountDirection(short Id, short ChNo, short Dir);

long WINAPI AioSetCntmOperationMode(short Id, short ChNo, short Phase, short Mul, short SyncClr);

long WINAPI AioSetCntmDigitalFilter(short Id, short ChNo, short FilterValue);

long WINAPI AioSetCntmPulseWidth(short Id, short ChNo, short PlsWidth);

long WINAPI AioSetCntmDIType(short Id, short ChNo, short InputType);

long WINAPI AioSetCntmOutputHardwareEvent(short Id, short ChNo, short OutputLogic, unsigned long EventType, short PulseWidth);

long WINAPI AioSetCntmInputHardwareEvent(short Id, short ChNo, unsigned long EventType, short RF0, short RF1, short Reserved);

long WINAPI AioSetCntmCountMatchHardwareEvent(short Id, short ChNo, short RegisterNo, unsigned long EventType, short Reserved);

long WINAPI AioSetCntmPresetRegister(short Id, short ChNo, unsigned long PresetData, short Reserved);

long WINAPI AioSetCntmTestPulse(short Id, short CntmInternal, short CntmOut, short CntmReserved);

// Setting function (get)
long WINAPI AioGetCntmZMode(short Id, short ChNo, short *Mode);

long WINAPI AioGetCntmZLogic(short Id, short ChNo, short *ZLogic);

long WINAPI AioGetCntmChannelSignal(short Id, short CntmChNo, short *CntmSigType);

long WINAPI AioGetCntmCountDirection(short Id, short ChNo, short *Dir);

long WINAPI AioGetCntmOperationMode(short Id, short ChNo, short *Phase, short *Mul, short *SyncClr);

long WINAPI AioGetCntmDigitalFilter(short Id, short ChNo, short *FilterValue);

long WINAPI AioGetCntmPulseWidth(short Id, short ChNo, short *PlsWidth);

// Counter function
long WINAPI AioCntmStartCount(short Id, short *ChNo, short ChNum);

long WINAPI AioCntmStopCount(short Id, short *ChNo, short ChNum);

long WINAPI AioCntmPreset(short Id, short *ChNo, short ChNum, unsigned long *PresetData);

long WINAPI AioCntmZeroClearCount(short Id, short *ChNo, short ChNum);

long WINAPI AioCntmReadCount(short Id, short *ChNo, short ChNum, unsigned long *CntDat);

long WINAPI AioCntmReadStatus(short Id, short ChNo, short *Sts);

long WINAPI AioCntmReadStatusEx(short Id, short ChNo, unsigned long *Sts);

// Notify function
long WINAPI AioCntmNotifyCountUp(short Id, short ChNo, short RegNo, unsigned long Count, HANDLE hWnd);

long WINAPI AioCntmStopNotifyCountUp(short Id, short ChNo, short RegNo);

long WINAPI AioCntmCountUpCallbackProc(short Id , void *CallBackProc , void *Param);

long WINAPI AioCntmNotifyCounterError(short Id, HANDLE hWnd);

long WINAPI AioCntmStopNotifyCounterError(short Id);

long WINAPI AioCntmCounterErrorCallbackProc(short Id , void *CallBackProc , void *Param);

long WINAPI AioCntmNotifyCarryBorrow(short Id, HANDLE hWnd);

long WINAPI AioCntmStopNotifyCarryBorrow(short Id);

long WINAPI AioCntmCarryBorrowCallbackProc(short Id, void *CallBackProc, void *Param);

long WINAPI AioCntmNotifyTimer(short Id, unsigned long TimeValue, HANDLE hWnd);

long WINAPI AioCntmStopNotifyTimer(short Id);

long WINAPI AioCntmTimerCallbackProc(short Id , void *CallBackProc , void *Param);

// General purpose input function
long WINAPI AioCntmInputDIByte(short Id, short Reserved, BYTE *bData);

long WINAPI AioCntmOutputDOBit(short Id, short AiomChNo, short Reserved, BYTE OutData);