contec_hacking/research/additional_samples/Additional sample program  Analog Input Repeat Ver.1.00/AiRepeat/Sample/eng/VbNet2013/AiRepeat/Caio.vb

	
	'Timer Function
	Declare Function AioSetTmEvent Lib "CAIO.DLL" (ByVal Id As Short, ByVal TimerId As Short, ByVal hWnd As Integer, ByVal TmEvent As Integer) As Integer
	Declare Function AioGetTmEvent Lib "CAIO.DLL" (ByVal Id As Short, ByVal TimerId As Short, ByRef hWnd As Integer, ByRef TmEvent As Integer) As Integer
    Declare Function AioSetTmCallBackProc Lib "CAIO.DLL" (ByVal Id As Short, ByVal TimerId As Short, ByVal PTMCALLBACK As IntPtr, ByVal TmEvent As Integer, ByVal Param As IntPtr) As Integer
	Declare Function AioStartTmTimer Lib "CAIO.DLL" (ByVal Id As Short, ByVal TimerId As Short, ByVal Interval As Single) As Integer
	Declare Function AioStopTmTimer Lib "CAIO.DLL" (ByVal Id As Short, ByVal TimerId As Short) As Integer
	Declare Function AioStartTmCount Lib "CAIO.DLL" (ByVal Id As Short, ByVal TimerId As Short) As Integer
	Declare Function AioStopTmCount Lib "CAIO.DLL" (ByVal Id As Short, ByVal TimerId As Short) As Integer
	Declare Function AioLapTmCount Lib "CAIO.DLL" (ByVal Id As Short, ByVal TimerId As Short, ByRef Lap As Integer) As Integer
	Declare Function AioResetTmCount Lib "CAIO.DLL" (ByVal Id As Short, ByVal TimerId As Short) As Integer
	Declare Function AioTmWait Lib "CAIO.DLL" (ByVal Id As Short, ByVal TimerId As Short, ByVal Wait As Integer) As Integer
	
	'Event Controller
	Declare Function AioSetEcuSignal Lib "CAIO.DLL" (ByVal Id As Short, ByVal Destination As Short, ByVal Source As Short) As Integer
	Declare Function AioGetEcuSignal Lib "CAIO.DLL" (ByVal Id As Short, ByVal Destination As Short, ByRef Source As Short) As Integer


	' Setting function (set)
	Declare Function AioGetCntmMaxChannels Lib "CAIO.DLL" (ByVal Id As Short, ByRef CntmMaxChannels As Short) As Integer
	Declare Function AioSetCntmZMode Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByVal Mode As Short) As Integer
	Declare Function AioSetCntmZLogic Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByVal ZLogic As Short) As Integer
	Declare Function AioSelectCntmChannelSignal Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByVal SigType As Short) As Integer
	Declare Function AioSetCntmCountDirection Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByVal Dir As Short) As Integer
	Declare Function AioSetCntmOperationMode Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByVal Phase As Short, ByVal Mul As Short, ByVal SyncClr As Short) As Integer
	Declare Function AioSetCntmDigitalFilter Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByVal FilterValue As Short) As Integer
	Declare Function AioSetCntmPulseWidth Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByVal PlsWidth As Short) As Integer
	Declare Function AioSetCntmDIType Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByVal InputType As Short) As Integer
	Declare Function AioSetCntmOutputHardwareEvent Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByVal OutputLogic As Short, ByVal EventType As Integer, ByVal PulseWidth As Short) As Integer
	Declare Function AioSetCntmInputHardwareEvent Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByVal EventType As Integer, ByVal RF0 As Short, ByVal RF1 As Short, ByVal Reserved As Short) As Integer
	Declare Function AioSetCntmCountMatchHardwareEvent Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByVal RegisterNo As Short, ByVal EventType As Integer, ByVal Reserved As Short) As Integer
	Declare Function AioSetCntmPresetRegister Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByVal PresetData As Integer, ByVal Reserved As Short) As Integer
	Declare Function AioSetCntmTestPulse Lib "CAIO.DLL" (ByVal Id As Short, ByVal CntmInternal As Short, ByVal CntmOut As Short, ByVal CntmReserved As Short) As Integer

	' Setting function (get)
	Declare Function AioGetCntmZMode Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByRef Mode As Short) As Integer
	Declare Function AioGetCntmZLogic Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByRef ZLogic As Short) As Integer
	Declare Function AioGetCntmChannelSignal Lib "CAIO.DLL" (ByVal Id As Short, ByVal CntmChNo As Short, ByRef CntmSigType As Short) As Integer
	Declare Function AioGetCntmCountDirection Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByRef Dir As Short) As Integer
	Declare Function AioGetCntmOperationMode Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByRef Phase As Short, ByRef Mul As Short, ByRef SyncClr As Short) As Integer
	Declare Function AioGetCntmDigitalFilter Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByRef FilterValue As Short) As Integer
	Declare Function AioGetCntmPulseWidth Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByRef PlsWidth As Short) As Integer

    ' Counter function
    Declare Function AioCntmStartCount Lib "CAIO.DLL" (ByVal Id As Short, <MarshalAs(UnmanagedType.LPArray)> ByVal ChNo() As Short, ByVal ChNum As Short) As Integer
    Declare Function AioCntmStopCount Lib "CAIO.DLL" (ByVal Id As Short, <MarshalAs(UnmanagedType.LPArray)> ByVal ChNo() As Short, ByVal ChNum As Short) As Integer
    Declare Function AioCntmPreset Lib "CAIO.DLL" (ByVal Id As Short, <MarshalAs(UnmanagedType.LPArray)> ByVal ChNo() As Short, ByVal ChNum As Short, <MarshalAs(UnmanagedType.LPArray)> ByVal PresetData() As Integer) As Integer
    Declare Function AioCntmZeroClearCount Lib "CAIO.DLL" (ByVal Id As Short, <MarshalAs(UnmanagedType.LPArray)> ByVal ChNo() As Short, ByVal ChNum As Short) As Integer
    Declare Function AioCntmReadCount Lib "CAIO.DLL" (ByVal Id As Short, <MarshalAs(UnmanagedType.LPArray)> ByVal ChNo() As Short, ByVal ChNum As Short, <MarshalAs(UnmanagedType.LPArray)> ByVal CntDat() As Integer) As Integer
    Declare Function AioCntmReadStatus Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByRef Sts As Short) As Integer
	Declare Function AioCntmReadStatusEx Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByRef Sts As Integer) As Integer

	' Notify function
	Declare Function AioCntmNotifyCountUp Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByVal RegNo As Short, ByVal Count As Integer, ByVal hWnd As Integer) As Integer
    Declare Function AioCntmStopNotifyCountUp Lib "CAIO.DLL" (ByVal Id As Short, ByVal ChNo As Short, ByVal RegNo As Short) As Integer
    Declare Function AioCntmCountUpCallbackProc Lib "CAIO.DLL" (ByVal Id As Short, ByVal pAioCntmCountUpCallBack As IntPtr, ByVal Param As IntPtr) As Integer
	Declare Function AioCntmNotifyCounterError Lib "CAIO.DLL" (ByVal Id As Short, ByVal hWnd As Integer) As Integer
    Declare Function AioCntmStopNotifyCounterError Lib "CAIO.DLL" (ByVal Id As Short) As Integer
    Declare Function AioCntmCounterErrorCallbackProc Lib "CAIO.DLL" (ByVal Id As Short, ByVal pAioCntmCounterErrorCallBack As IntPtr, ByVal Param As IntPtr) As Integer
	Declare Function AioCntmNotifyCarryBorrow Lib "CAIO.DLL" (ByVal Id As Short, ByVal hWnd As Integer) As Integer
    Declare Function AioCntmStopNotifyCarryBorrow Lib "CAIO.DLL" (ByVal Id As Short) As Integer
    Declare Function AioCntmCarryBorrowCallbackProc Lib "CAIO.DLL" (ByVal Id As Short, ByVal pAioCntmCarryBorrowCallBack As IntPtr, ByVal Param As IntPtr) As Integer
	Declare Function AioCntmNotifyTimer Lib "CAIO.DLL" (ByVal Id As Short, ByVal TimeValue As Integer, ByVal hWnd As Integer) As Integer
    Declare Function AioCntmStopNotifyTimer Lib "CAIO.DLL" (ByVal Id As Short) As Integer
    Declare Function AioCntmTimerCallbackProc Lib "CAIO.DLL" (ByVal Id As Short, ByVal pAioCntmTmCallBack As IntPtr, ByVal Param As IntPtr) As Integer
	
	' General purpose input function
	Declare Function AioCntmInputDIByte Lib "CAIO.DLL" (ByVal Id As Short, ByVal Reserved As Short, ByRef bData As Byte) As Integer
	Declare Function AioCntmOutputDOBit Lib "CAIO.DLL" (ByVal Id As Short, ByVal AiomChNo As Short, ByVal Reserved As Short, ByVal OutData As Byte) As Integer


End Module